@@ -8,12 +8,7 @@ find_library(MOSEK_LIBRARY
     HINTS ${MOSEK_DIR} $ENV{MOSEK_DIR}
     PATH_SUFFIXES bin)
 
-find_library(IOMP5_LIBRARY
-    NAMES iomp5
-    HINTS ${MOSEK_DIR} $ENV{MOSEK_DIR}
-    PATH_SUFFIXES bin)
-
-set(MOSEK_LIBRARIES ${MOSEK_LIBRARY} ${IOMP5_LIBRARY})
+set(MOSEK_LIBRARIES ${MOSEK_LIBRARY})
 
 include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(MOSEK DEFAULT_MSG MOSEK_INCLUDE_DIRS MOSEK_LIBRARIES)
